[package]
name = "crypto_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.20.3", features = ["rand"]}
anyhow = "1.0.42"
web3 = "0.16.0"
tokio = "1.9.0"
fltk = {version = "1.3.29", git = "https://github.com/fltk-rs/fltk-rs"}